# ICON-Radar-Assessment

./: CMakeLists.txt  OGM.csv  README.md  main.cpp
